# final-qualifying-work

./: .gitignore  Dockerfile  README.md  api_client.ipynb  big_query_speed_test.ipynb  docker-compose.yml  get_github_data.ipynb  get_github_events.ipynb  get_transations.ipynb  github_analysis.ipynb  products.txt  pyproject.toml  queries.py  requirements.txt
clickhouse_demo/: clickhouse_demo.ipynb  get_transations.ipynb  github_analysis.ipynb
docs/: 2024_403_EliseevEV.docx  Eliseev EV.pptx  patterns.xlsx  products.txt  transactions.xlsx  ~$24_403_EliseevEV.docx  ~$Eliseev EV.pptx  ~$Р Елисеев.docx  Алгоритм преобразования в транзакции.drawio  Архитектура.drawio  Архитектура.drawio.drawio  База данных.drawio  ВКР Елисеев.docx  Диаграмма вариантов использования.drawio  Диаграмма классов.drawio  Задание.docx  Календарный план ВКР_бакалавры.docx  Календарный план.docx  Отчет Практики.docx  Протокол первичного нормоконтроля (1).docx  Схема транзакций.drawio  Титульный лист.docx
docs-example/: BachelorThesis_Task.docx  BachelorThesis_Title.docx
docs/practice/: Practice_2024_EliseevEV.docx  Дневник бакалавра.docx  Календарный план.docx  Отзыв.docx
github_patterns/: dtype_conf.json  manage.py  requirements.txt
github_patterns/github_patterns/: .env  asgi.py  settings.py  urls.py  wsgi.py
github_patterns/github_patterns_app/: apps.py  models.py  urls.py  views.py
github_patterns/modules/: exceptions.py  (+5 more)
project/: clickhouse_demo.py  dtype_conf.json  github_api.py  github_data_converter.py  pattern_miner.py  program_test.ipynb  queries.py  service_connector.py
(+9 files in other folders)
